Ticket #11517 (closed build error: fixed)

Opened 3 years ago

Last modified 3 years ago

Broken compilation with intel compiler

Reported by: King_DuckZ Owned by:
Priority: normal Milestone:
Component: build Version: 2.9.0
Keywords: Cc:
Blocked By: Patch: yes
Blocking:

Description

A small mistake in fd.h was causing problems with compilation using intel compiler (modifide code was only used if current compiler was intel's - #if defined(INTELC) && defined(LINUX)).
Correction is: wxFD_CLR() function's return type should be void rather than bool.

Attachments

fd.h.patch download (0.5 KB) - added by King_DuckZ 3 years ago.

Change History

Changed 3 years ago by King_DuckZ

Changed 3 years ago by vadz

  • status changed from new to confirmed

Thanks, the patch is definitely correct and I'll apply it for now but I wonder if these definitions are still needed at all. Maybe they're not needed any more with more recent icc versions? Please don't hesitate to submit a patch removing them then.

Also, please update icc information on the  supported platforms list if you test with a version not covered there or with a later revision than mentioned.

TIA!

Changed 3 years ago by VZ

  • status changed from confirmed to closed
  • resolution set to fixed

(In [62790]) Fix wxFD_CLR() definition for Intel compiler under Linux.

wxFD_CLR() should be void, not bool.

Closes #11517.

Note: See TracTickets for help on using tickets.